--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,8 @@ a{
     padding: 0 50px;
     height: 50px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    position: fixed;
+    z-index: 2;
 }
 
 /*  Menu
@@ -180,4 +182,120 @@ a{
 
 .wrapper-options-menu li a:hover{
     background: #2e2e2e;
+}
+
+/*  -------------------------------------------------------------
+  DASHBOARD
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.dashboard{
+    width: 100%;
+    height: 100vh;
+    background: #edf2fb;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 25px;
+}
+
+.dash-panel{
+    border-radius: 15px 15px 0px 0px;
+    padding-top: 50px;
+}
+
+.dash-panel:nth-child(1){
+    grid-column: 1/3;
+}
+
+
+.dash-panel-header{
+    padding: 25px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dash-panel-header-title{
+    font-size: 25px;
+    margin: 0;
+    font-weight: 600;
+    color: #212529;
+}
+
+.dash-panel-content{
+    background: #ffffff;
+    height: 100%;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+
+/*  -------------------------------------------------------------
+  BUTTONS
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.btn{
+    padding: 8px 16px;
+    border: 1px solid #ced4da;
+    color: inherit;
+    border-radius: 100px;
+    cursor: pointer;
+}
+
+/*  Legend
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+.dash-panel-header-legend{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.dash-panel-header-legend-item{
+    position: relative;
+}
+
+.dash-panel-header-legend .badge:nth-child(1) i{
+    color: #2b9348;
+}
+
+.dash-panel-header-legend .badge:nth-child(2) i{
+    color: #ff6b6b;
+}
+
+.dash-panel-header-legend .badge{
+    font-size: 12px;
+    margin: 0;
+    margin-left: 5px;
+}
+
+.dash-panel-header-legend i{
+    font-size: 18px;
+}
+
+.badge-number{
+    position: absolute;
+    top: -10px;
+    right: 0;
+    color: #ffffff;
+    height: 20px;
+    width: 10px;
+}
+
+/*  -------------------------------------------------------------
+  BADGES
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.badge{
+    background: #dee2e6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 10px;
+    border-radius: 100px;
+}
+
+/*  -------------------------------------------------------------
+  COLORS
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.bg-red{
+    background: #ff6b6b;
 }
