--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,6 +401,7 @@ table{
     padding: 3px;
     font-size: 12px;
     width: 25px;
+    height: 25px;
     color: var(--gray-50);
     cursor: pointer;
 }
@@ -527,6 +528,52 @@ table{
     width: 10px;
 }
 
+/*  -------------------------------------------------------------
+  MODALS
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+  /*  Overlay
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.modals{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: var(--black-alpha-30);
+    z-index: 4;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 500px;
+    background: var(--white-00);
+    border: 1px solid var(--black-alpha-60);
+    border-radius: 10px;
+    box-shadow: 0 28px 42px var(--shadow-3);
+    padding: 20px;
+}
+
+.modal-header{
+    padding: 0 20px;
+    width: 100%;
+    height: 60px;
+    border-bottom: 1px solid var(--black-alpha-15);
+}
+
+.modal-footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 0 20px;
+    width: 100%;
+    border-top: 1px solid var(--black-alpha-15);
+}
 
 /*  -------------------------------------------------------------
   RESPONSIVE DESIGN
