--- a/frontend/includes/header.html
+++ b/frontend/includes/header.html
@@ -9,12 +9,12 @@
 				</div>
 				<nav class="navbar">
 					<ul>
-						<li><a class="menu_item" href="#"> <i class="icon-list-alt"></i> <span>El Salvador</span></a></li>
+						<!-- <li><a class="menu_item" href="#"> <i class="icon-list-alt"></i> <span>El Salvador</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-globe"></i> <span>El Mundo</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-cog"></i> <span>Producción</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-cube"></i> <span>Inventario</span></a></li>
 						<li><a class="menu_item" href="#"> <i class="icon-folder-open"></i> <span>Kiosko</span></a></li>
-						<li><a class="menu_item" href="#"> <i class="icon-shield"></i> <span>Admin</span></a></li>
+						<li><a class="menu_item" href="#"> <i class="icon-shield"></i> <span>Admin</span></a></li> -->
 					</ul>
 				</nav>
 			</div>
@@ -29,28 +29,27 @@
 				</div>
 
 				<div class="wraper-options">
-					<p class="wrapper-options-name">Luis Cruz</p>
-					<p class="wrapper-options-email">lcruz@elmundo.sv</p>
+					<p class="wrapper-options-name" id="userName">Luis Cruz</p>
+					<p class="wrapper-options-email" id="userEmail">lcruz@elmundo.sv</p>
 					<ul class="wrapper-options-menu">
 						<div class="menu-phone">
-							<li><a href="#"><i class="icon-list-alt"></i><span>El Salvador</span></a></li>
+							<!-- <li><a href="#"><i class="icon-list-alt"></i><span>El Salvador</span></a></li>
 							<li><a href="#"><i class="icon-globe"></i><span>El Mundo</span></a></li>
 							<li><a href="#"><i class="icon-cog"></i><span>Producción</span></a></li>
 							<li><a href="#"><i class="icon-cube"></i><span>Inventario</span></a></li>
 							<li><a href="#"><i class="icon-folder-open"></i><span>Kiosko</span></a></li>
-							<li><a href="#"><i class="icon-shield"></i><span>Admin</span></a></li>
+							<li><a href="#"><i class="icon-shield"></i><span>Admin</span></a></li> -->
 						</div>
-
-						<li>
-							<a href="#">
-								<i class="icon-user-o"></i>
-								<span>Mi perfil</span>
-							</a>
-						</li>
 						<li>
 							<a href="#" id="logout">
 								<i class="icon-logout"></i>
 								<span>Cerrar sesión</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="icon-user-o"></i>
+								<span>Contacto</span>
 							</a>
 						</li>
 					</ul>
